python/src/playlister/manifests/playlister-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: playlister
spec:
  replicas: 1
  selector:
    matchLabels:
      app: playlister
  template:
    metadata:
      labels:
        app: playlister
    spec:
      containers:
        - name: playlister
          image: fadedguy/playlister:latest
          ports:
            - containerPort: 4200
