python/src/playlister/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: playlister
spec:
  type: ClusterIP
  selector:
    app: playlister
  ports:
    - name: http
      port: 4200
      targetPort: 4200
