python/src/playlister/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: playlister-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: playlister.com
      http:
          paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: playlister
                port: 
                  number: 4200
